derive/test/compile_fail/newtype_index.stderr
error: proc-macro derive panicked
 --> compile_fail/newtype_index.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `index` on newtype field
